--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,4 @@
 <%= link_to "Finish order",
-            order_path(params[:id]),
+            order_path(@order),
             method: :patch,
             data: { confirm: "Are you sure?" } %>
