added fragile css

--- a/app/views/shared/_item_card.html.erb
+++ b/app/views/shared/_item_card.html.erb
@@ -1,4 +1,5 @@
 <div class="item-card d-flex">
   <p>1x Sweet Jam Present</p>
-  <p class="fragile-tag">what</p>
+  <p class="fragile-tag-empty">fragile</p>
+  <p class="fragile-tag-full">fragile</p>
 </div>
