--- a/app/assets/stylesheets/components/_fragile_tag.scss
+++ b/app/assets/stylesheets/components/_fragile_tag.scss
@@ -1,3 +1,14 @@
-.fragile-tag {
+.fragile-tag-empty {
+  color: #F46969;
+  border: 2px solid #F46969;
+  border-radius: 20px;
+  padding: 3px 15px 3px 15px;
+}
 
+.fragile-tag-full {
+  color: white;
+  background-color: #F46969;
+  border: 2px solid #F46969;
+  border-radius: 20px;
+  padding: 3px 15px 3px 15px;
 }
