--- a/app/views/shared/_item_card.html.erb
+++ b/app/views/shared/_item_card.html.erb
@@ -1,5 +1,9 @@
-<div class="item-card d-flex">
+<div class="item-card">
   <p>1x Sweet Jam Present</p>
-  <p class="fragile-tag-empty">fragile</p>
-  <p class="fragile-tag-full">fragile</p>
+  <div class="item-card-right">
+    <p class="fragile-tag-empty">fragile</p>
+    <div class="tick-box">
+      <p>✔</p>
+    </div>
+  </div>
 </div>
