--- a/app/assets/stylesheets/components/_item_card.scss
+++ b/app/assets/stylesheets/components/_item_card.scss
@@ -4,9 +4,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 100px 0 100px;
-
+  padding: 0 70px 0 70px;
   p {
     margin: 0;
   }
+}
+
+.item-card-right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 150px;
 }
