finished javascript for tickbox

--- a/app/assets/stylesheets/components/_item_card.scss
+++ b/app/assets/stylesheets/components/_item_card.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 70px 0 70px;
+  background-color: white;
   p {
     margin: 0;
   }
