--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,11 @@
-<%= link_to "Finish order",
+<%#= link_to "Finish order",
             order_path(@order),
             method: :patch,
             data: { confirm: "Are you sure?" } %>
+
+
+
+
+
+
+<%= render "shared/boxcard" %>
