--- a/app/assets/stylesheets/components/_boxcard.scss
+++ b/app/assets/stylesheets/components/_boxcard.scss
@@ -3,6 +3,9 @@
   height: 60px;
   width: 100vw;
   padding: 10px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .box-name {
@@ -22,7 +25,7 @@
 }
 
 #threed {
-  color: rgb(255, 169, 169);
+  color: white;
   font-size: 12px;
   margin: 0;
   font-weight: 700;
@@ -32,4 +35,14 @@
   color: white;
   font-size: 12px;
   margin: 0;
+}
+
+.boxcard-right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 40%;
+  p {
+    margin: 0;
+  }
 }
