--- a/app/views/shared/_boxcard.html.erb
+++ b/app/views/shared/_boxcard.html.erb
@@ -1,9 +1,12 @@
 <div class="boxcard">
-  <h3 class="box-name">MEDIUM BOX 2 <i class="fas fa-cube mr-1 ml-3"></i><span id="threed">3D</span></h3>
-  <h6 id="box-size">28x22x10 | 4 kg</h6>
-  <div class="boxcard-right">
+  <div class="boxcard-left">
+    <h3 class="box-name">MEDIUM BOX 2 <i class="fas fa-cube mr-1 ml-2"></i><span id="threed">3D</span></h3>
+    <h6 id="box-size">28x22x10 | 4 kg</h6>
   </div>
-
-
-
+  <div class="boxcard-right">
+    <div class="fragile-tag-full">fragile</div>
+    <div class="tick-box">
+      <p class="d-none">✔</p>
+    </div>
+  </div>
 </div>
