--- a/app/views/shared/_item_card.html.erb
+++ b/app/views/shared/_item_card.html.erb
@@ -3,7 +3,7 @@
   <div class="item-card-right">
     <p class="fragile-tag-empty">fragile</p>
     <div class="tick-box">
-      <p class="tick d-none">✔</p>
+      <p class="d-none">✔</p>
     </div>
   </div>
 </div>
