--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,3 +11,19 @@
 
 
 <%= render "shared/boxcard" %>
+
+<button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#exampleModal">
+  View this box
+</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
