--- a/app/assets/stylesheets/components/_fragile_tag.scss
+++ b/app/assets/stylesheets/components/_fragile_tag.scss
@@ -3,6 +3,7 @@
   border: 2px solid #F46969;
   border-radius: 20px;
   padding: 3px 15px 3px 15px;
+  font-size: 9px;
 }
 
 .fragile-tag-full {
@@ -11,4 +12,5 @@
   border: 2px solid #F46969;
   border-radius: 20px;
   padding: 3px 15px 3px 15px;
+  font-size: 10px;
 }
