--- a/app/views/shared/_item_card.html.erb
+++ b/app/views/shared/_item_card.html.erb
@@ -1,5 +1,5 @@
 <div class="item-card">
-  <p>1x Sweet Jam Present</p>
+  <p id="item-name">1x Sweet Jam Present</p>
   <div class="item-card-right">
     <p class="fragile-tag-empty">fragile</p>
     <div class="tick-box">
