removed dropdown classes

--- a/app/views/shared/_boxcard.html.erb
+++ b/app/views/shared/_boxcard.html.erb
@@ -1,5 +1,5 @@
 <div class="boxcard">
-  <div class="boxcard-left" data-boxcard-id="1">
+  <div class="boxcard-left">
     <h3 class="box-name">MEDIUM BOX 2 <i class="fas fa-cube mr-1 ml-2"></i><span id="threed">3D</span></h3>
     <h6 id="box-size">28x22x10 | 4 kg</h6>
   </div>
@@ -13,6 +13,6 @@
 
 
 <%# <div class="boxcard-dropdown d-none" id="<%= dom_id(activity)%>
-<div class="boxcard-dropdown d-none" id="id_1">
+<div>
   <%= render "shared/item_card" %>
 </div>
