--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,13 +1,12 @@
-<%= render 'shared/item_card' %>
-<%= link_to "Finish order",
+<div class="container accordion" id="boxesAccordion">
+  <% @boxes_hash[:boxes].each do |box| %>
+    <%= render "shared/boxcard", :locals => {box: box} %>
+    <div class="items">
+      <% box[:items].each do |item| %>
+        <%= render 'shared/item_card', :locals => {item: item, box: box} %>
+      <% end %>
+    </div>
+  <% end %>
 
-            order_path(@order),
-            method: :patch,
-            data: { confirm: "Are you sure?" } %>
-
-
-
-
-
-
-<%= render "shared/boxcard" %>
+  <%= link_to "Finish order", order_path(@order), method: :patch, data: { confirm: "Are you sure?" } %>
+</div>
