fixed fragile buttons and styling of boxcard

--- a/app/assets/stylesheets/components/_item_card.scss
+++ b/app/assets/stylesheets/components/_item_card.scss
@@ -16,7 +16,7 @@
 .item-card-right {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 30%;
 }
 
