--- a/app/assets/stylesheets/components/_boxcard.scss
+++ b/app/assets/stylesheets/components/_boxcard.scss
@@ -40,7 +40,7 @@
 .boxcard-right {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 30%;
   p {
     margin: 0;
