--- a/app/assets/stylesheets/components/_fragile_tag.scss
+++ b/app/assets/stylesheets/components/_fragile_tag.scss
@@ -4,6 +4,7 @@
   border-radius: 20px;
   padding: 3px 15px 3px 15px;
   font-size: 9px;
+  margin-right: 10px !important;
 }
 
 .fragile-tag-full {
@@ -13,4 +14,5 @@
   border-radius: 20px;
   padding: 3px 15px 3px 15px;
   font-size: 10px;
+  margin-right: 10px;
 }
