--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,13 +7,23 @@
   align-items: center;
   width: 100%;
   padding: 20px;
-  border-top: 1px solid grey;
+  // border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+  // color: #636363 !important;
+  text-decoration: none;
 }
 
 .card-product h3 {
+  color: #636363;
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  a {
+    color: #636363;
+  }
+  a:hover {
+    text-decoration: none;
+  }
 }
 
 .card-product p {
@@ -28,6 +38,16 @@
   padding: 16px;
 }
 
-// .packed {
-//   color: green;
-// }
+.orders-list {
+  background-color: #5BBCF2;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 40px;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 12px;
+}
+
+.fa-check {
+  color: green;
+}
