--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,8 @@
   align-items: center;
   width: 100%;
   padding: 20px;
-  border-top: 1px solid grey;
+  border-top: 2px solid #E5E5E5;
+  color: #636363;
 }
 
 .card-product h3 {
