--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,27 +3,29 @@
     <div class="col-sm-12">
       <h2>Orders to be shipped</h2>
       <% @orders.each do |order| %>
-        <div class="row justify-content-center">
-          <div class="col-12 col-md-8">
-            <div id="small-card" class="row">
-              <div class="card-product">
-                <div class="order-weight">
-                <h3><%= link_to order.name, order_path(order) %></h3>
-                <p><% %>3kg</p>
-                </div>
-                <div class="card-product-infos">
-                  <p><strong>Mar 19, 2021</strong></p>
-                  <p><%= Time.now.strftime("%H:%M") %></p>
-                  <% if order.packed %>
-                      <i class="fas fa-check"><p>Packed</p></i>
-                    <% else %>
-                      <p> Not Packed</p>
-                    <% end %>
+        <%= link_to order_path(order) do %>
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+              <div id="small-card" class="row">
+                <div class="card-product">
+                  <div class="order-weight">
+                  <h3><%= order.name %></h3>
+                  <p><% %>3kg</p>
+                  </div>
+                  <div class="card-product-infos">
+                    <p><strong>Mar 19, 2021</strong></p>
+                    <p><%= Time.now.strftime("%H:%M") %></p>
+                    <% if order.packed %>
+                        <i class="fas fa-check"><p>Packed</p></i>
+                      <% else %>
+                        <p> Not Packed</p>
+                      <% end %>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
       <div class="bottom-button">
         <h2>New Order</h2>
