got 3d view working

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -12,6 +12,8 @@
 
 <%= render "shared/boxcard" %>
 
+<div id="threed-test"></div>
+
 <button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#exampleModal">
   View this box
 </button>
@@ -27,3 +29,5 @@
     </div>
   </div>
 </div>
+
+<%= render '3d_view' %>
