--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,6 +5,10 @@
 }
 
 .footer {
+  a {
+    color: #FFFFFF;
+    text-decoration: none;
+  }
   background-color: #009AED;
   text-align: center;
   color: #FFFFFF;
