--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,22 +1,21 @@
 .card-product {
-  overflow: hidden;
+  // overflow: hidden;
   height: 80px;
   background: white;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
-  padding: 20px;
-  // border-top: 1px solid grey;
-  border-bottom: 1px solid grey;
-  // color: #636363 !important;
+  padding: 10px;
+  border-top: 1px solid #F2F2F2;
+  border-bottom: 1px solid #F2F2F2;
   text-decoration: none;
 }
 
 .card-product h3 {
   color: #636363;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: 600;
   margin: 0;
   a {
     color: #636363;
@@ -31,23 +30,39 @@
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
+  // margin-top: 8px;
 }
 
-.card-product .card-product-infos {
-  padding: 16px;
+.card-product-infos {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
+
+
 
 .orders-list {
   background-color: #5BBCF2;
   width: 100%;
   padding: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   color: #FFFFFF;
-  text-align: center;
-  font-size: 12px;
+  h4 {
+    font-size: 12px;
+    text-align: center;
+    margin: 0;
+  }
 }
 
 .fa-check {
   color: green;
+}
+
+.order-date {
+  font-weight: 700;
+  margin: 0;
+}
+
+.order-time {
+  text-align: right;
 }
