--- a/app/assets/stylesheets/components/_boxcard.scss
+++ b/app/assets/stylesheets/components/_boxcard.scss
@@ -3,6 +3,7 @@
   height: 60px;
   width: 100%;
   padding: 10px 10px;
+  margin:  5px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
