--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,7 +15,7 @@
             <p class="order-time"><%= order.created_at.strftime("%H:%M") %></p>
             <% if order.packed %>
               <div class="packed text-right">
-                <p class="text-right"><i class="fas fa-check"></i>Packed</p>
+                <p class="text-right"><i class="fas fa-check mr-1"></i>Packed</p>
               </div>
             <% end %>
           </div>
