--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,10 +2,11 @@
   <h4>Orders to be shipped</h4>
 </div>
 <% @orders.each do |order| %>
+  <%= link_to order_path(order) do %>
       <div id="small-card">
         <div class="card-product">
           <div class="order-weight d-flex flex-column justify-content-between">
-            <h3><%= link_to order.name, order_path(order) %></h3>
+            <h3><%= order.name %></h3>
             <% sum = 0 %>
             <% order.items.each { |item| sum += item.weight} %>
             <p><%= sum/1000.0 %>kg</p>
@@ -22,5 +23,6 @@
           </div>
         </div>
       </div>
+  <% end %>
 <% end %>
 
