--- a/app/views/orders/_3d_view.html.erb
+++ b/app/views/orders/_3d_view.html.erb
@@ -1,9 +1,9 @@
-<button style="position: absolute; top: 0px; z-index: 100" onclick="itemType='normal'; init(); animate();">normal</button>
+<%# <button style="position: absolute; top: 0px; z-index: 100" onclick="itemType='normal'; init(); animate();">normal</button>
 <button style="position: absolute; top: 25px; z-index: 100" onclick="itemType='wireframe'; init(); animate();">wireframe</button>
-<button style="position: absolute; top: 50px; z-index: 100" onclick="itemType='transparent'; init(); animate();">transparent</button>
+<button style="position: absolute; top: 50px; z-index: 100" onclick="itemType='transparent'; init(); animate();">transparent</button> %>
 
-<div id="container">
-  <canvas width="1279" height="609" style="width: 853px; height: 406px;"></canvas>
+<div id="3d-container">
+  <canvas height="673" width="340" style="mw-100 mh-100"></canvas>
   <div style="position: absolute; top: 100px; color: rgb(255, 255, 255); font-size: 12px; z-index: 100;">
     <table>
       <tr>
