--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,15 +19,15 @@
 </button>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-sm" role="document">
     <div class="modal-content">
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <div class="modal-body p-0">
+        <button type="button" class="close position-absolute text-white" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+        <%= render '3d_view' %>
       </div>
     </div>
   </div>
 </div>
 
-<%= render '3d_view' %>
