--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,7 +3,7 @@
 }
 
 .header {
-  font-weight: 600; 
+  font-weight: 600;
   color: #5BBCF2;
   font-size: 16px;
   margin-bottom: 0;
@@ -18,4 +18,20 @@
 
 .collapsing {
   transition: none;
+}
+
+.note {
+  background-color: #FFFAEA;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+.note-text {
+  font-size: 12px;
+  margin: 0;
+  color: #636363;
+  span {
+    font-weight: 700;
+  }
 }
