--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,13 +19,15 @@
 </button>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm" role="document">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body p-0">
+      <div class="modal-body p-0 m-0" style="background-color: black;">
         <button type="button" class="close position-absolute text-white" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <%= render '3d_view' %>
+        <div>
+          <%= render '3d_view' %>
+        </div>
       </div>
     </div>
   </div>
