--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   justify-content: space-between;
   background: white;
   padding: 10px 10px;
+  min-height: 50px;
 }
 
 .navbar-lewagon .navbar-collapse {
