--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,7 @@
+<%= link_to order_path(@order), method: :patch, data: { confirm: "Are you sure?" } do %>
 <div class="footer">
-  <% if params[:action] == "index" %>
-    <h3>NEW ORDER</h3>
-  <% elsif params[:action] == "show" %>
-    <h3><%= link_to "CONFIRM", order_path(@order), method: :patch, data: { confirm: "Are you sure?" } %></h3>
-  <% else %>
-    <h3>BACK</h3>
-    <% end %>
+  <% if params[:action] == "show" %>
+    <h3>CONFIRM</h3>
+  <% end %>
 </div>
+<% end %>
