--- a/app/assets/stylesheets/components/_tick_box.scss
+++ b/app/assets/stylesheets/components/_tick_box.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid #D2D2D2;
   border-radius: 5px;
   p {
     font-size: 18px;
