--- a/app/views/shared/_item_card.html.erb
+++ b/app/views/shared/_item_card.html.erb
@@ -5,7 +5,7 @@
       <p class="fragile-tag-empty">fragile</p>
     <% end %>
     <div class="tick-box">
-      <p class="d-none">✔</p>
+      <i class="fas fa-check d-none"></i>
     </div>
   </div>
 </div>
