--- a/app/assets/stylesheets/components/_tick_box.scss
+++ b/app/assets/stylesheets/components/_tick_box.scss
@@ -7,7 +7,8 @@
   align-items: center;
   border: 1px solid #D2D2D2;
   border-radius: 5px;
-  p {
+  i {
     font-size: 18px;
+    color: green;
   }
 }
