--- a/app/views/shared/_boxcard.html.erb
+++ b/app/views/shared/_boxcard.html.erb
@@ -8,7 +8,7 @@
   <div class="boxcard-right">
      <% if locals[:box][:contains_fragile] %> <span class="fragile-tag-full">fragile</span> <% end %>
     <div class="tick-box">
-      <p class="d-none">✔</p>
+      <i class="fas fa-check d-none"></i>
     </div>
   </div>
 </div>
