3d preview now works for each bin as intended

--- a/app/assets/stylesheets/components/3D_card.scss
+++ b/app/assets/stylesheets/components/3D_card.scss
@@ -16,3 +16,14 @@
   margin: 0 0 0 8px;
   font-weight: 700;
 }
+
+#threed-container {
+  position: absolute;
+  top: 0;
+}
+
+#three-container-close {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
