--- a/app/views/orders/_3d_view.html.erb
+++ b/app/views/orders/_3d_view.html.erb
@@ -2,29 +2,13 @@
 <button style="position: absolute; top: 25px; z-index: 100" onclick="itemType='wireframe'; init(); animate();">wireframe</button>
 <button style="position: absolute; top: 50px; z-index: 100" onclick="itemType='transparent'; init(); animate();">transparent</button> %>
 
-<div id="3d-container">
+<div id="threed-container" class="d-none">
   <canvas height="673" width="340" style="mw-100 mh-100"></canvas>
   <div style="position: absolute; top: 100px; color: rgb(255, 255, 255); font-size: 12px; z-index: 100;">
-    <table>
-      <tr>
-        <td colspan="3">contents legend</td>
-      </tr>
-      <tr>
-        <td colspan="3"><hr></td>
-      </tr>
-      <tr>
-        <td>1 : 2 x 4 x 2</td>
-        <td>=</td>
-        <td><span style="height: 10px; width: 10px; background: rgb(70, 238, 136);">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></td>
-      </tr>
-      <tr>
-        <td>0 : 1 x 2 x 3</td>
-        <td>=</td>
-        <td><span style="height: 10px; width: 10px; background: rgb(178, 76, 171);">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></td>
-      </tr>
-    </table>
   </div>
 </div>
+
+<div id="three-container-close" class="btn btn-primary d-none">Close</div>
 
 <%# javascript_pack_tag '3d_resources/three' %>
 <%# javascript_pack_tag '3d_resources/TrackballControls' %>
