--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,27 +11,14 @@
     <div class="items">
       <div class="threed-card collapse" id="collapse<%= box[:name].gsub(" ", "") %>" data-parent="#boxesAccordion">
         <i class="fas fa-cube"></i>
-        <p id="threed" class="threed-button" type="button" data-box-id="<%= box[:id] %>" data-data-toggle="modal" data-target="#threed-modal-<%= index %>">3D View</p>
+        <p id="threed" class="threed-button" type="button" data-box-id="<%= box[:id] %>">3D View</p>
       </div>
       <% box[:items].each do |item| %>
         <%= render 'shared/item_card', :locals => {item: item, box: box} %>
       <% end %>
     </div>
-
-    <div class="modal fade" id="threed-modal-<%= index %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-body p-0 m-0" style="background-color: black;">
-            <button type="button" class="close position-absolute text-white" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-            <div>
-              <%= render '3d_view' %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   <% end %>
 </div>
+
+<%= render '3d_view' %>
 
