--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -43,7 +43,7 @@
 
 
 .orders-list {
-  background-color: #5BBCF2;
+  background-color: #72BBFE;
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
