--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #5BBCF2;
+  color: white;
   padding: 10px 10px;
   min-height: 50px;
 }
@@ -17,5 +18,5 @@
   position: absolute;
   left: 17px;
   top: 17px;
-  color:  #5BBCF2;
+  color: white;
 }
