--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -4,7 +4,7 @@
 
 .header {
   font-weight: 600;
-  color: #5BBCF2;
+  color: white;
   font-size: 16px;
   margin-bottom: 0;
   // margin-top: 15px;
@@ -12,7 +12,7 @@
 
 .sub-header {
   font-size: 10px;
-  color: #999999;
+  color: white;
   margin: 0;
 }
 
