--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #5BBCF2;
+  background: #009AED;
   color: white;
   padding: 10px 10px;
   min-height: 50px;
