--- a/app/views/orders/_3d_view.html.erb
+++ b/app/views/orders/_3d_view.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div id="three-container-close" class="btn btn-primary d-none">Close</div>
+<div id="three-container-close" class="btn btn-primary d-none"><h3>CLOSE</h3></div>
 
 <%# javascript_pack_tag '3d_resources/three' %>
 <%# javascript_pack_tag '3d_resources/TrackballControls' %>
