no confirm button for packed orders

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
-<%= link_to order_path(@order), method: :patch, data: { confirm: "Are you sure?" } do %>
-<div class="footer mt-4">
-  <% if params[:action] == "show" %>
-    <h3>CONFIRM</h3>
+<% if @order.packed == false %>
+  <%= link_to order_path(@order), method: :patch, data: { confirm: "Are you sure?" } do %>
+  <div class="footer mt-4">
+    <% if params[:action] == "show" %>
+      <h3>CONFIRM</h3>
+    <% end %>
+  </div>
   <% end %>
-</div>
 <% end %>
