clean up 3d view css, better variable names and refactored code

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,7 +8,8 @@
 @import "fragile_tag";
 @import "tick_box";
 @import "footer";
-@import "3D_card";
+@import "3d_card";
+@import "3d_view";
 
 .modal-dialog {
   width: 100%;
