--- a/app/views/orders/_3d_view.html.erb
+++ b/app/views/orders/_3d_view.html.erb
@@ -2,7 +2,7 @@
 <button style="position: absolute; top: 25px; z-index: 100" onclick="itemType='wireframe'; init(); animate();">wireframe</button>
 <button style="position: absolute; top: 50px; z-index: 100" onclick="itemType='transparent'; init(); animate();">transparent</button> %>
 
-<div id="threed-container" class="d-none">
+<div id="threed-container" class="d-none" data-json="<%= bin_data %>">
   <canvas height="673" width="340" style="mw-100 mh-100"></canvas>
   <div style="position: absolute; top: 100px; color: rgb(255, 255, 255); font-size: 12px; z-index: 100;">
   </div>
