new header font and background

--- a/app/assets/stylesheets/components/_boxcard.scss
+++ b/app/assets/stylesheets/components/_boxcard.scss
@@ -15,10 +15,10 @@
   margin: 0;
   margin-bottom: 4px;
   font-weight: 600;
+  font-family: 'Poppins', sans-serif;
 }
 
 .box-header {
-  // width: 30%;
   margin: 0;
 }
 
