--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -5,13 +5,13 @@
 .header {
   font-weight: 600;
   color: white;
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 0;
-  // margin-top: 15px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .sub-header {
-  font-size: 10px;
+  font-size: 12px;
   color: white;
   margin: 0;
 }
