--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="page-container">
+    <div class="page-container" style="background-image: url(<%= image_path('Intersect.png')%>); background-size: cover; background-position: center; ">
       <div class="navbar-container"><%= render 'shared/navbar' %></div>
       <%= render 'shared/flashes' %>
       <div class="content-container"><%= yield %></div>
