--- a/app/assets/stylesheets/components/_3d_view.scss
+++ b/app/assets/stylesheets/components/_3d_view.scss
@@ -17,6 +17,8 @@
   h3 {
     margin: 0;
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
   }
   &:hover {
     opacity: 0.8;
