--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -49,9 +49,10 @@
   margin-bottom: 10px;
   color: #FFFFFF;
   h4 {
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
   }
 }
 
